# test-fork

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
core/: Cargo.toml
core/src/: cmdline.rs  error.rs  fork.rs  fork_test.rs  lib.rs  procmac.rs  sugar.rs
core/tests/: snapshots.rs
core/tests/snapshots/: snapshots__snapshot_bench_attr.snap  snapshots__snapshot_fork_attr.snap  snapshots__snapshot_test_attr.snap  snapshots__snapshot_test_result.snap  snapshots__snapshot_test_should_panic.snap
impl/src/: child_wrapper.rs  lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: child_wrapper.rs  cmdline.rs  error.rs  fork.rs  fork_test.rs  lib.rs
tests/: end-to-end.rs  failures.rs  unstable.rs
tests/fail/: bench-invalid-sig.rs  bench-invalid-sig.stderr  fork-env-mut-capture.rs  fork-env-mut-capture.stderr  fork-no-inner-bench.rs  fork-no-inner-bench.stderr  fork-no-inner-test.rs  fork-no-inner-test.stderr  test-invalid-args.rs  test-invalid-args.stderr
