[workspace]
members = [
  ".",
  "core",
  "macros",
]

[package]
name = "test-fork"
version = "0.1.1"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/d-e-s-o/test-fork"
repository = "https://github.com/d-e-s-o/test-fork"
documentation = "https://docs.rs/test-fork"
readme = "README.md"
categories = [
  "development-tools::testing",
  "development-tools",
]
keywords = [
  "testing",
  "process",
  "fork",
]
description = """
A library for running tests in separate processes.
"""

[dependencies]
test-fork-core = { version = "=0.1.1", path = "core" }
test-fork-macros = { version = "=0.1.1", path = "macros" }

[dev-dependencies]
trybuild = "1.0"
