[workspace]
members = [
  ".",
  "core",
  "macros",
]

[workspace.package]
version = "0.1.3"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/d-e-s-o/test-fork"
repository = "https://github.com/d-e-s-o/test-fork"

[workspace.lints.rust]
deprecated-safe = "warn"
future-incompatible = "warn"
keyword-idents = "warn"
let-underscore = "warn"
missing-debug-implementations = "warn"
missing-docs = "warn"
trivial-numeric-casts = "warn"
unsafe-op-in-unsafe-fn = "warn"
unused = "warn"

[workspace.lints.clippy]
collapsible-else-if = "allow"
collapsible-if = "allow"
diverging-sub-expression = "allow"
let-and-return = "allow"
let-unit-value = "allow"
module-inception = "allow"
type-complexity = "allow"
absolute-paths = "warn"
allow-attributes = "warn"
cast-sign-loss = "warn"
clone-on-ref-ptr = "warn"
dbg-macro = "warn"
debug-assert-with-mut-call = "warn"
derive-partial-eq-without-eq = "warn"
doc-markdown = "warn"
indexing-slicing = "warn"
invalid-upcast-comparisons = "warn"
join-absolute-paths = "warn"
large-enum-variant = "warn"
let-underscore-must-use = "warn"
lossy-float-literal = "warn"
multiple-unsafe-ops-per-block = "warn"
panic-in-result-fn = "warn"
ptr-as-ptr = "warn"
redundant-closure-for-method-calls = "warn"
string-slice = "warn"
unchecked-time-subtraction = "warn"
undocumented-unsafe-blocks = "warn"
uninlined-format-args = "warn"
unwrap-in-result = "warn"
use-self = "warn"
wildcard-imports = "warn"

[package]
name = "test-fork"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/test-fork"
readme = "README.md"
categories = [
  "development-tools::testing",
  "development-tools",
]
keywords = [
  "testing",
  "process",
  "fork",
]
description = """
A library for running tests in separate processes.
"""

[features]
# Enable unstable features. These are generally exempt from any semantic
# versioning guarantees.
unstable = ["test-fork-macros/unstable"]
# Enable potentially unsound features.
unsound = ["test-fork-macros/unsound"]

[[test]]
name = "unstable"
required-features = ["unstable", "unsound"]

[dependencies]
test-fork-core = { version = "=0.1.3", path = "core" }
test-fork-macros = { version = "=0.1.3", path = "macros" }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
trybuild = "1.0"

[lints]
workspace = true

# See https://docs.rs/about/metadata
[package.metadata.docs.rs]
features = ["unstable", "unsound"]
# Define the configuration attribute `docsrs`.
rustdoc-args = ["--cfg", "docsrs"]
