[package]
name = "test-fork-macros"
version = "0.1.0"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/d-e-s-o/test-fork"
description = """
Supporting procedural macro crate for test-fork.
"""

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.32", default-features = false }
quote = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = false, features = ["full", "parsing", "printing", "proc-macro"] }
