[package]
name = "test-fork-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = """
Supporting procedural macro crate for test-fork.
"""

[lib]
proc-macro = true

[features]
unstable = []
unsound = []

[dependencies]
syn = { version = "2.0", default-features = false, features = ["clone-impls", "full", "parsing", "printing", "proc-macro"] }
test-fork-core = { version = "=0.1.4", path = "../core" }

[lints]
workspace = true
